fixed issues and in a working state